# arc

./: 0.bootstrap.js  bootstrap.js
.github/: continuous-integration.sh
.github/workflows/: gh-pages.yml  report.yml  test.yml
arc-codegen/local/macros/src/: enums.rs  structs.rs  tasks.rs
arc-codegen/shared/src/: enums.rs  lib.rs  primitives.rs  strings.rs  structs.rs
arc-codegen/src/: lib.rs
arc-codegen/tests/: rewrite.rs
arc-lang/editor/vim/syntax/: arc.vim
arc-lang/examples/: arith.arc  assign.arc  async.arc  basic.arc  binopref.arc  binops.arc  compr.arc  comprehensions.arc  cql.arc  dumb.arc  enum-patterns.arc  enum.arc  even-odd.arc  fib-functional.arc  fib-imperative.arc  fib.arc  generic-enum.arc  generic.arc  generics.arc  global.arc  hidden.arc  id-fun.arc  id-task.arc  interpolate.arc  lambda.arc  modules.arc  monoid.arc  open-records.arc  overload-plus.arc  overload.arc  paths.arc  pre-declaration.arc  query.arc  record-patterns.arc  row-polymorphism-shape.arc  row-polymorphism.arc  shapes.arc  task-identity.arc  task-lambda.arc  task-merge.arc  (+9 more)
arc-lang/src/: ast.ml  ast_to_hir.ml  hir.ml  hir_to_mir.ml  infer.ml  lexer.mll  mir.ml  mir_to_mlir.ml  mir_to_rust.ml  mlir.ml  parser.bugged  parser.mly  pretty_ast.ml  pretty_hir.ml  pretty_mir.ml  pretty_mlir.ml  token.ml  utils.ml
arc-lang/stdlib/: stdlib.arc  stdlib.mlir
arc-mlir/: arc-mlir-build
arc-mlir/src/: CMakeLists.txt
arc-mlir/src/include/Arc/: Arc.td  Passes.h  Passes.td
arc-mlir/src/include/Rust/: Rust.td  RustPrinterStream.h
arc-mlir/src/lib/Arc/: Dialect.cpp  LowerToRust.cpp  ToFSM.cpp
arc-mlir/src/lib/Rust/: Dialect.cpp
arc-mlir/src/tests/: CMakeLists.txt
arc-mlir/src/tests/arc-to-rust/: adt.mlir.rust-tests  calls-streams.mlir  calls-streams.mlir.rust-tests  calls.mlir  calls.mlir.rust-tests  enums.mlir.rust-tests  external-calls.mlir  external-calls.mlir.rust-tests  float-tensor-arith.mlir.rust-tests  foreign-calls.mlir.rust-tests  (+2 more)
arc-mlir/src/tools/: arc-cargo.in  arc-mlir-rust-test.in
arc-python/arclib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
arc-python/pickles/: load_Filter2_arg0  load_Map1_arg0
arc-report/: main.tex
arc-report/bibliography/: references.bib
arc-report/sections/: abstract.tex
arc-runtime/: Cargo.toml
arc-runtime/examples/consensus/: Cargo.toml
arc-runtime/macros/: Cargo.toml
arc-runtime/macros/src/: derives.rs  enums.rs  functions.rs  lib.rs  main_function.rs  nonpersistent_tasks.rs  persistent_tasks.rs  procedural.rs  structs.rs  tasks.rs
arc-runtime/macros/src/proc_macro_attrs/rewrite/: functions.rs
arc-runtime/src/: context.rs  data.rs  executor.rs  gc.rs  lib.rs  logging.rs  loops.rs  macros.rs  operators.rs  runtime.rs  system.rs  timer.rs
arc-runtime/src/channels/: datagen.rs  macros.rs  mod.rs
arc-runtime/src/channels/local/: broadcast.rs  concurrent.rs  data_parallel.rs  keyed.rs  task_parallel.rs
arc-runtime/src/channels/remote/: broadcast.rs  task_parallel.rs
arc-runtime/src/data/: alloc.rs  conversions.rs  enums.rs  erased.rs  functions.rs  garbage.rs  mod.rs  primitives.rs  strings.rs  structs.rs  vectors.rs
arc-runtime/tests/: allocation.rs  arrow-tensor.rs  basic.rs  closures.rs  context.rs  foo.rs  functions.rs  future.rs  nonpersistent_task.rs  persistent_task.rs  pipeline.rs  rewrite.rs  rewrite_nonpersistent_task.rs  rewrite_persistent_task.rs  source_map_log.rs  types.rs
arc-script/: Cargo.toml
arc-website/src/arc-lang/: Instance.md  Task.md  TypeClass.md  mod.md
arc-website/syntax/src/: main.rs
book/: 404.html  chapter-1-introduction.html  chapter-2-installation.html  chapter-3-tutorial.html  chapter-4-arc-script.html  chapter-5-arc-mlir.html  index.html  print.html  searchindex.js  searchindex.json
docs/src/: continuous-integration.md
(+4 files in other folders)
