[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnipaxos   = { git = "https://github.com/segeljakt/omnipaxos", branch = "master" }
hocon       = { version = "0.5.2" }
kompact     = { git = "https://github.com/segeljakt/kompact", branch = "master" }
arc-runtime = { path = "../../" }
rand = "0.8.4"
